Rapid Prd/src/objects/Underwriting__c.object
<CustomObject>
    <fields>
        <fullName>Eligible_for_Rapid_Funding__c</fullName>
        <label>Eligible for Rapid Funding?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Once Funding Condition is met</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Est_Days_to_Repay__c</fullName>
        <label>Est. Days to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exceptions__c</fullName>
        <label>Exceptions:</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;$15001 Min Advance Amount</fullName>
                </value>
                <value>
                    <fullName>&lt; 1 year owned business</fullName>
                </value>
                <value>
                    <fullName>&lt;2500 min cc volume</fullName>
                </value>
                <value>
                    <fullName>&lt;2500 Minimum Advance Amount</fullName>
                </value>
                <value>
                    <fullName>&lt;3500 min cc volume</fullName>
                </value>
                <value>
                    <fullName>&lt;5000 Minimum Advance Amount</fullName>
                </value>
                <value>
                    <fullName>Baker Hill score</fullName>
                </value>
                <value>
                    <fullName>BK Filing/Discharge &lt;1yr</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>Does not meet batching requirements</fullName>
                </value>
                <value>
                    <fullName>Dollar Amount</fullName>
                </value>
                <value>
                    <fullName>Early Renewal</fullName>
                </value>
                <value>
                    <fullName>Exceed maximum split</fullName>
                </value>
                <value>
                    <fullName>Exceeds maximum term</fullName>
                </value>
                <value>
                    <fullName>FICO score</fullName>
                </value>
                <value>
                    <fullName>Funding Low Batching</fullName>
                </value>
                <value>
                    <fullName>Jewelry Store</fullName>
                </value>
                <value>
                    <fullName>Lease &lt; 1 year remaining</fullName>
                </value>
                <value>
                    <fullName>Limos</fullName>
                </value>
                <value>
                    <fullName>Loan w/Special Pricing</fullName>
                </value>
                <value>
                    <fullName>Low Batching</fullName>
                </value>
                <value>
                    <fullName>Missing 1 month bank statement</fullName>
                </value>
                <value>
                    <fullName>Missing 2 months bank statements</fullName>
                </value>
                <value>
                    <fullName>Missing Landlord Interview</fullName>
                </value>
                <value>
                    <fullName>Missing Tax Repayment Plan</fullName>
                </value>
                <value>
                    <fullName>Mortgage 60 DPD</fullName>
                </value>
                <value>
                    <fullName>Mortgage 90 DPD</fullName>
                </value>
                <value>
                    <fullName>Mortgage Modification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_Competitor_Advance__c</fullName>
        <formula>text( Opportunity__r.Existing_Competitor_Advance2__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Existing Competitor Advance?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Daily_Repay__c</fullName>
        <label>Expected Daily Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FRSA_legal_name_same_as_in_Salesforce__c</fullName>
        <formula>text( Opportunity__r.FRSA_legal_name_same_as_in_Salesforce__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FRSA legal name same as in Salesforce?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_you_had_a_cash_advance_before__c</fullName>
        <label>Have you had a cash advance before?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_started_eviction_proceedings__c</fullName>
        <label>Have you started eviction proceedings?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_value_confirmed_through__c</fullName>
        <label>Home value confirmed through:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Zillow</fullName>
                </value>
                <value>
                    <fullName>Trulia</fullName>
                </value>
                <value>
                    <fullName>No Result Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_Long_has_Owner_Leased_Property__c</fullName>
        <label>How Long has Owner Leased Property?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - 6 months</fullName>
                </value>
                <value>
                    <fullName>7 - 11 months</fullName>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>4 Years</fullName>
                </value>
                <value>
                    <fullName>5 years +</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_long_have_you_used_current_processor__c</fullName>
        <label>How long have you used current processor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 to 3 months</fullName>
                </value>
                <value>
                    <fullName>4 to 6 months</fullName>
                </value>
                <value>
                    <fullName>7 to 12 months</fullName>
                </value>
                <value>
                    <fullName>&gt; 1 year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_many_locations_for_this_business__c</fullName>
        <label>How many locations for this advance?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_many_sqft_does_the_merchant_occupy__c</fullName>
        <label>How many sqft does the merchant occupy?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_many_square_feet_is_the_business__c</fullName>
        <label>How many square feet is the business?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_much_is_the_rent_for_the_business__c</fullName>
        <label>How much is the rent for the business?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>How_much_of_the_business_do_you_own__c</fullName>
        <label>How much of the business do you own?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30% to 50%</fullName>
                </value>
                <value>
                    <fullName>51% to 99%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_closing_in_the_next_year_what_period__c</fullName>
        <label>If closing in the next year what period?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spring</fullName>
                </value>
                <value>
                    <fullName>Summer</fullName>
                </value>
                <value>
                    <fullName>Fall</fullName>
                </value>
                <value>
                    <fullName>Winter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_no_please_explain_principal_westlaw__c</fullName>
        <label>If no, please explain</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_other_then_what__c</fullName>
        <label>If other, then what?</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_so_are_you_current_on_franchise_dues__c</fullName>
        <label>If so are you current on franchise dues?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_so_for_how_much__c</fullName>
        <label>If so, for how much?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$100 to $500</fullName>
                </value>
                <value>
                    <fullName>$501 to $1,000</fullName>
                </value>
                <value>
                    <fullName>$1,001 to $5,000</fullName>
                </value>
                <value>
                    <fullName>$5,001 to $10,000</fullName>
                </value>
                <value>
                    <fullName>&gt; $10,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_so_then_what_type__c</fullName>
        <label>If so, then what type?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_so_with_which_Cash_Advance_Company__c</fullName>
        <label>If so, with which Cash Advance Company?</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_how_many_months__c</fullName>
        <label>If yes, how many months?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Month</fullName>
                </value>
                <value>
                    <fullName>2 Months</fullName>
                </value>
                <value>
                    <fullName>3 Months</fullName>
                </value>
                <value>
                    <fullName>4 Months</fullName>
                </value>
                <value>
                    <fullName>5 Months +</fullName>
                </value>
                <value>
                    <fullName>Partial Payment Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <label>Import Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Bankruptcies__c</fullName>
        <formula>text( Opportunity__r.Individual_Bankruptcies__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Individual Bankruptcies:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_File_Review_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial File Review Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_File_Review__c</fullName>
        <label>Initial File Review</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initial_Review_Turn_Days__c</fullName>
        <formula>if

( isnull (Initial_File_Review__c ) ,NULL ,

if

((Initial_File_Review__c - UW_Assigned_Date_Stamp__c)&gt;3,

(Initial_File_Review__c - UW_Assigned_Date_Stamp__c)-2,

Initial_File_Review__c - UW_Assigned_Date_Stamp__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Review Turn Days</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_underwriting_notes__c</fullName>
        <label>Internal underwriting notes:</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_this_a_triple_net_lease__c</fullName>
        <label>Is this a triple net lease?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_business_a_franchise__c</fullName>
        <label>Is this business a franchise?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_business_type_considered_luxury__c</fullName>
        <formula>Opportunity__r.BA_Is_the_business_type_considered_Luxur__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is this business type considered luxury?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Judgements_Open__c</fullName>
        <formula>TEXT( Opportunity__r.Judgements_Open__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Judgements Open:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LI_When_does_your_lease_expire__c</fullName>
        <label>When does your lease expire?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 to 6 months</fullName>
                </value>
                <value>
                    <fullName>7 to 11 months</fullName>
                </value>
                <value>
                    <fullName>1 yr</fullName>
                </value>
                <value>
                    <fullName>2 yrs</fullName>
                </value>
                <value>
                    <fullName>3 yrs</fullName>
                </value>
                <value>
                    <fullName>4 yrs</fullName>
                </value>
                <value>
                    <fullName>5 yrs+</fullName>
                </value>
                <value>
                    <fullName>Month to Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Landlord_Address__c</fullName>
        <label>Landlord Notes:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Landlord_Contact_Name__c</fullName>
        <label>Landlord Contact Name:</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landlord_Phone_Number__c</fullName>
        <label>Landlord Phone Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Late_w_Vendors_Details__c</fullName>
        <label>Late w/ Vendors Details:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <formula>if(isblank(text( Opportunity__r.New_Lead_Source__c )),text( Opportunity__r.LeadSource ),text( Opportunity__r.New_Lead_Source__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_2_Landlord_Notes__c</fullName>
        <label>Location 2 Landlord Notes:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_3_Landlord_Notes__c</fullName>
        <label>Location 3 Landlord Notes:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_4_Landlord_Notes__c</fullName>
        <label>Location 4 Landlord Notes:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MEB_1__c</fullName>
        <formula>Opportunity__r.MEB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MEB 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MEB_2__c</fullName>
        <formula>Opportunity__r.MEB_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MEB 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MI_When_does_your_lease_expire__c</fullName>
        <label>When does your lease expire?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 to 6 months</fullName>
                </value>
                <value>
                    <fullName>7 to 11 months</fullName>
                </value>
                <value>
                    <fullName>1 yr</fullName>
                </value>
                <value>
                    <fullName>2 yrs</fullName>
                </value>
                <value>
                    <fullName>3 yrs</fullName>
                </value>
                <value>
                    <fullName>4 yrs</fullName>
                </value>
                <value>
                    <fullName>5 yrs+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Merchant_Interview_Completed_Date__c</fullName>
        <label>Merchant Interview Completed Date:</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Month_1__c</fullName>
        <formula>text( Opportunity__r.Month__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_2__c</fullName>
        <formula>text( Opportunity__r.Month_2__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Gross_Deposit_1__c</fullName>
        <formula>Opportunity__r.Month_Average_Gross_Sale_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Gross Deposit 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Gross_Deposit_2__c</fullName>
        <formula>Opportunity__r.Month_Average_Gross_Sales_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Gross Deposit 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mortgage_delinquent__c</fullName>
        <formula>text(Opportunity__r.Mortgage_Delinquent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mortgage Delinquent:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAMAA_TAG__c</fullName>
        <formula>text(Opportunity__r.NAMAA__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NAMAA TAG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSF_1__c</fullName>
        <formula>Opportunity__r.NSF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of NSF 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSF_2__c</fullName>
        <formula>Opportunity__r.NSF_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of NSF 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Terminal_Type_Currently_Used__c</fullName>
        <label>Name of Terminal Type Currently Used?</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_s_of_additional_signor_s__c</fullName>
        <label>Name(s) of additional signor(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Advance_Price__c</fullName>
        <label>New Advance Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Payback_Price__c</fullName>
        <label>New Amount Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Percent_Payback__c</fullName>
        <label>New Daily Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_Processor__c</fullName>
        <formula>text( Opportunity__r.Processor_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Processor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Full_Time_Employees__c</fullName>
        <label>How many full time employees do you have</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 to 5</fullName>
                </value>
                <value>
                    <fullName>6 to 10</fullName>
                </value>
                <value>
                    <fullName>11 to 25</fullName>
                </value>
                <value>
                    <fullName>25+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Part_Time_Employees__c</fullName>
        <label>How many part time employees do you have</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 to 5</fullName>
                </value>
                <value>
                    <fullName>6 to 10</fullName>
                </value>
                <value>
                    <fullName>11 to 25</fullName>
                </value>
                <value>
                    <fullName>25+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OF_Does_the_Merchant_Own_Their_Home__c</fullName>
        <formula>text(Opportunity__r.Does_the_Merchant__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Does the Merchant Own Their Home</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppIDD__c</fullName>
        <caseSensitive>true</caseSensitive>
        <defaultValue>&apos;DO NOT CHANGE!&apos;</defaultValue>
        <label>OppIDD</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>Opportunity__r.Id</formula>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <formula>Opportunity__r.Opportunity_Number__c</formula>
        <label>Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Underwriting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Underwriting</relationshipLabel>
        <relationshipName>Underwriting</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_UCC_Filings__c</fullName>
        <formula>text( Opportunity__r.Other_UCC_Filings__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other UCC Filings:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Merchant_Interview_Assessment__c</fullName>
        <label>Overall Merchant Interview Assessment</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owned_Business_Since__c</fullName>
        <formula>Opportunity__r.Owned_Business_Since__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owned Business Since:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paid_Off_Letter_Received__c</fullName>
        <formula>Opportunity__r.Paid_Off_Letter_Rec_d__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paid Off Letter Received?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pay_Back_Amount__c</fullName>
        <formula>Opportunity__r.Pay_Back_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payoff_Amount__c</fullName>
        <formula>Opportunity__r.Payoff_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payoff Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Percent_Paid_Off__c</fullName>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Payback__c</fullName>
        <formula>Opportunity__r.Percent_Payback__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone_Number_For_MI__c</fullName>
        <label>Merchant Interview Phone Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PreQual_Decision_Time__c</fullName>
        <formula>IF 

(datevalue(Opportunity__r.PQ_Data_Entry_Date__c)=DATE(2013,01,18),

Abs(((Opportunity__r.Pre_Qual_Decision_Date__c - Opportunity__r.PQ_Data_Entry_Date__c)*24)-86),



IF

((Datevalue(Opportunity__r.Pre_Qual_Decision_Date__c) - datevalue(Opportunity__r.PQ_Data_Entry_Date__c))&gt;2,

Abs(((Opportunity__r.Pre_Qual_Decision_Date__c - Opportunity__r.PQ_Data_Entry_Date__c)*24)-62), 


IF

(ABS((Opportunity__r.Pre_Qual_Decision_Date__c - Opportunity__r.PQ_Data_Entry_Date__c)*24)&gt;10,

ABS((Opportunity__r.Pre_Qual_Decision_Date__c - Opportunity__r.PQ_Data_Entry_Date__c)*24)-((Datevalue(Opportunity__r.Pre_Qual_Decision_Date__c) - datevalue(Opportunity__r.PQ_Data_Entry_Date__c))*14),





(Opportunity__r.Pre_Qual_Decision_Date__c - Opportunity__r.PQ_Data_Entry_Date__c)*24)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PreQual Decision Time</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Applicant_2_FICO__c</fullName>
        <label>Previous Applicant #2 FICO</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_FICO__c</fullName>
        <label>Previous Applicant #1 FICO</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Campaign_Source__c</fullName>
        <formula>Opportunity__r.Campaign.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Campaign Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Info__c</fullName>
        <formula>&quot;Primary Contact Info:&quot;&amp; BR() 
&amp; &quot;Full Name: &quot;&amp; Contact__r.FirstName &amp; &quot; &quot; &amp;Contact__r.LastName &amp; BR() 
&amp; &quot;Ownership: &quot;&amp; text( Contact__r.OwnershipPercentage__c*100 )&amp;&quot;%&quot;&amp; BR() 
&amp; &quot;Address:&quot;&amp; BR() 
&amp; Contact__r.Principal_1_Street_Address__c &amp; BR() 
&amp; Contact__r.Principal_1_City__c &amp;&quot;, &quot;&amp; Contact__r.Principal_1_State__c &amp;&quot; &quot;&amp; Contact__r.Principal_1_Zip__c &amp; BR() 
&amp; &quot;Phone: &quot;&amp; Contact__r.Principal_Home_Phone__c  &amp; BR() 
&amp; &quot;Mobile: &quot;&amp; Contact__r.MobilePhone &amp; BR() 
&amp; &quot;Fax: &quot;&amp;Contact__r.Fax&amp; BR() 
&amp; &quot;Email: &quot;&amp; Contact__r.Email &amp; BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>text( Opportunity__r.Product__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Amount__c</fullName>
        <label>Amount Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Funds__c</fullName>
        <formula>text( Opportunity__r.Purpose_of_Funds__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purpose of Funds</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QC_Calculator_Average__c</fullName>
        <formula>Opportunity__r.QC_Calculator_Average__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QC Calculator Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QC_Calculator_Gross_Monthly_Sales__c</fullName>
        <formula>Opportunity__r.QC_Gross_Monthly_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QC Calculator Gross Monthly Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QC_Decision_Date__c</fullName>
        <formula>Opportunity__r.Data_Entry_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QC Decision Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QC_Decision_Time__c</fullName>
        <formula>if 

( isnull ( UW_Assigned_Date_Stamp__c ) ,NULL , 

IF 

(datevalue(Submit_to_UW_Processing__c)=DATE(2013,01,18),

Abs(((UW_Assigned_Date_Stamp__c - Submit_to_UW_Processing__c)*24)-86),



IF

((Datevalue(UW_Assigned_Date_Stamp__c) - datevalue(Submit_to_UW_Processing__c))&gt;2,

Abs(((UW_Assigned_Date_Stamp__c - Submit_to_UW_Processing__c)*24)-62), 


IF

(ABS((UW_Assigned_Date_Stamp__c - Submit_to_UW_Processing__c)*24)&gt;10,

ABS((UW_Assigned_Date_Stamp__c - Submit_to_UW_Processing__c)*24)-((Datevalue(UW_Assigned_Date_Stamp__c) - datevalue(Submit_to_UW_Processing__c))*14),




(UW_Assigned_Date_Stamp__c - Submit_to_UW_Processing__c)*24))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QC Decision Time</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
</CustomObject>